app_dev_with_gw/iphone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iphone-deploy
  namespace: app1-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iphone-page
  template:
    metadata:
      labels:
        app: iphone-page
    spec:
      containers:
      - name: python-http
        image: python:alpine
        command: ["/bin/sh", "-c"]
        args:
          - |
            mkdir -p /iphone &&
            echo " <html>
                    <head>
                      <title>iPhone Users</title>
                    </head>
                    <body>
                      <h1>iPhone Users</h1>
                      <p>Welcome to cloud with Salman </p>
                    </body>
            </html>" > /iphone/index.html &&
            cd / &&
            python3 -m http.server 5678
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: iphone-svc
  namespace: app1-ns
spec:
  selector:
    app: iphone-page
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
